src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
}

.background {
  height: 100vh;
  height: calc(var(--vh, 1vh) * 100);
  width: 100vw;
  padding: 10px;
}

.active-area {
  background-color: white;
  opacity: 0.8;
  padding: 5px;
  min-height: calc(100vh - 20px);
  min-height: calc(calc(var(--vh, 1vh) * 100) - 20px);
  max-height: min(calc(calc(var(--vh, 1vh) * 100) - 20px), 700px);
  min-width: min(1000px, calc(100vw - 20px));
  max-width: 1000px;
}

